<resources>

    <string name="app_name">JobHound</string>
	
    <string name="back">Back</string>
    
    <!-- Main Menu -->
    <string name="search">Search</string>
    <string name="profile">Profile</string>
    <string name="diary">Diary</string>
    <string name="saved">Saved</string>
    
    <!-- Search Menu -->
    <string name="searchChoice">Choose Your Search Type: </string>
    <string name="custom">Custom</string>
    
    <!-- Profile Page -->
     <string name="titleProfile">Profile </string>
    <string name="job1">Job 1: </string>
    <string name="job2">Job 2: </string>
    <string name="job3">Job 3: </string>
    <string name="contractType">Contract Type: </string>
    <string-array name="contract_array">
        <item>Permanent</item>
        <item>Temporary</item>
    </string-array>
    <string name="workHours">Work Hours: </string>
    <string-array name="workHours_array">
        <item>0-16</item>
        <item>16-32</item>
        <item>>32</item>
    </string-array>
    <string name="jsaProgress">JSA Progress: </string>
    <string name="save">Save</string>
    
    <!-- Search Results -->
    <string name="results">Search Results: </string>
    
    <!-- Search Result -->
    <string name="source">Source: </string>
    <string name="title">Title: </string>
    <string name="description">Description: </string>
    <string name="apply">Apply!</string>
   
    <!-- Diary -->
    <string name="diaryLog">Diary Log</string>
    <string name="date">Date</string>
    <string name="employer">Employer</string>
    <string name="further_action">Further Action</string>
    <string name="action">Action</string>
    <string name="when">When? (if applicable)</string>
    <string name="suitability">Suitability</string>
    <string name="reason">Reason</string>
    <string name="comments">Comments</string>
    <string name="Unsure">Unsure</string>
    <string name="Yes">Yes</string>
    <string name="No">No</string>
    <string name="PickDate">Pick Date</string>
    
    <string-array name="actions_arrays">
        <item>Used JobHound App</item>
        <item>Interview</item>
        <item>Applied Online</item>
        <item>Applied in Person</item>
        <item>Inquired in Store</item>
        <item>Training</item>
        <item>Went to the Jobcentre</item>
    </string-array>
    
       <string-array name="further_actions_arrays">
        <item>Needs Action</item>
        <item>Interview</item>
        <item>Applied Online</item>
        <item>Applied in Person</item>
        <item>Inquired in Store</item>
        <item>Training</item>
        <item>Went to the Jobcentre</item>
    </string-array>
    
    
        <string name="submit">Submit</string>
        <string name="employerEg">e.g. Jobcentre</string>
        <string name="datePicker">Click to Enter Date</string>
</resources>
