<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <TextView
     android:id="@+id/titleProfile"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:layout_alignParentTop="true"
     android:layout_marginLeft="10dp"
     android:layout_marginTop="10dp"
     android:ems="8" 
     android:fontFamily="sans-serif-condensed" 
     android:textSize="20sp" 
     android:text="@string/titleProfile"/>     
    
  <EditText
     android:id="@+id/job1"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:layout_centerHorizontal="true"
     android:layout_below="@+id/titleProfile"
     android:layout_marginTop="8dp"
     android:ems="8" 
     android:background="@drawable/custom_button_green"/>

 <EditText
     android:id="@+id/job2"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:layout_alignLeft="@+id/job1"
     android:layout_below="@+id/job1"
     android:layout_marginTop="8dp"
     android:ems="8" 
     android:background="@drawable/custom_button_green"/>

 <EditText
     android:id="@+id/job3"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:layout_alignLeft="@+id/job2"
     android:layout_below="@+id/job2"
     android:layout_marginTop="8dp"
     android:ems="8"
     android:background="@drawable/custom_button_green" />

 <TextView
     android:id="@+id/jobText1"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:layout_alignBaseline="@+id/job1"
     android:layout_alignBottom="@+id/job1"
     android:layout_alignParentLeft="true"
     android:layout_marginLeft="10dp"
     android:text="@string/job1" />

 <TextView
     android:id="@+id/jobText2"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:layout_alignBaseline="@+id/job2"
     android:layout_alignBottom="@+id/job2"
     android:layout_alignParentLeft="true"
     android:layout_marginLeft="10dp"     
     android:text="@string/job2" />

 <TextView
     android:id="@+id/jobText3"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:layout_alignBaseline="@+id/job3"
     android:layout_alignBottom="@+id/job3"
     android:layout_alignParentLeft="true"
     android:layout_marginLeft="10dp"
     android:text="@string/job3" />
 
 <TextView
     android:id="@+id/contractType"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:layout_alignBaseline="@+id/spinner1"
     android:layout_alignBottom="@+id/spinner1"
     android:layout_alignParentLeft="true"
     android:layout_marginLeft="10dp"
     android:text="@string/contractType" />

 <Spinner
     android:id="@+id/spinner1"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:layout_centerHorizontal="true"
     android:layout_below="@+id/job3"/>
 
 <ProgressBar  
     android:id="@+id/pb_horizontal"  
     style="@android:style/Widget.ProgressBar.Horizontal"  
     android:layout_width="fill_parent"  
     android:layout_height="wrap_content"  
     android:layout_below="@+id/jsaProgress"  
     android:max="100"/>  
   
 
 <TextView  
     android:id="@+id/tv_progress_horizontal"  
     android:layout_width="fill_parent"  
     android:layout_height="wrap_content"
     android:layout_below="@+id/jsaProgress" 
     android:layout_alignBottom="@id/pb_horizontal" 
     android:background="@android:color/transparent"  
     android:gravity="center"/>  
  

  <TextView
     android:id="@+id/jsaProgress"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:layout_below="@+id/contractType"
     android:layout_alignParentLeft="true"
     android:layout_marginLeft="10dp"
     android:layout_marginTop="20dp"
     android:text="@string/jsaProgress" />
  
       <Button  
     android:id="@+id/btn_save"  
     android:layout_width="wrap_content"  
     android:layout_height="wrap_content"
     android:layout_alignParentBottom="true"  
     android:layout_centerHorizontal="true"
     android:layout_marginBottom="20dp"  
     android:text="Save"  
     android:background="@drawable/custom_button_green" />
       
 <RelativeLayout  
     android:id="@+id/rl_progress_bar_set"  
     android:layout_width="fill_parent"  
     android:layout_height="wrap_content"
     android:layout_below="@+id/jsaProgress"  
     android:layout_marginTop="10dp"  
     android:visibility="gone" > 
     

 
 <!--<TextView
     android:id="@+id/workHours"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:layout_alignBaseline="@+id/spinner2"
     android:layout_alignBottom="@+id/spinner2"
     android:layout_alignParentLeft="true"
     android:layout_marginLeft="10dp"
     android:text="@string/workHours" />
     
 <Spinner
     android:id="@+id/spinner2"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:layout_centerHorizontal="true"
     android:layout_below="@+id/spinner1"/>-->
 
</RelativeLayout>
</RelativeLayout>
