<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
 	xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
     tools:context=".MainMenu" >
    
    <View
        android:id="@+id/anchor"
        android:layout_width="10dp"
        android:layout_height="10dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />
    
    <Button
        android:id="@+id/buttonSearch"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        
        android:layout_alignParentTop="true"
       
        android:layout_toLeftOf="@+id/anchor"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="120dp"
        android:text="@string/search" 
        android:background="@drawable/custom_button_green"/>

     <Button
         android:id="@+id/buttonDiary"
         android:layout_width="80dp"
         android:layout_height="wrap_content"
         android:layout_alignBaseline="@+id/buttonSearch"
         android:layout_marginLeft="20dp"
         android:layout_alignBottom="@+id/buttonSearch"
         android:layout_toRightOf="@+id/anchor"
         android:layout_centerHorizontal="true"
         android:text="@string/diary" 
         android:background="@drawable/custom_button_green"/>

          <Button
              android:id="@+id/buttonProfile"
              android:layout_width="80dp"
              android:layout_height="wrap_content"
              android:layout_alignRight="@+id/buttonSearch"
              
              android:layout_below="@+id/buttonSearch"
              android:layout_centerHorizontal="true"
              android:layout_toLeftOf="@+id/anchor"
              android:layout_marginTop="21dp"
              android:text="@string/profile" 
              android:background="@drawable/custom_button_green"/>
     
             <Button
              android:id="@+id/buttonSaved"
              android:layout_width="80dp"
              android:layout_height="wrap_content"
              android:layout_alignRight="@+id/buttonDiary"
              android:layout_toRightOf="@+id/anchor"
              android:layout_below="@+id/buttonDiary"
              android:layout_centerHorizontal="true"
              android:layout_marginTop="21dp"
              android:layout_marginLeft="20dp"
              android:text="@string/saved" 
              android:background="@drawable/custom_button_green"/>

             <ImageView
                 android:id="@+id/imageView1"
                 android:layout_width="80dp"
                 android:layout_height="80dp"
                 android:layout_alignParentRight="true"
                 android:layout_alignParentTop="true"
                 android:layout_marginRight="30dp"
                 android:src="@drawable/templogo" />
             
               <ImageView
                 android:id="@+id/imageView2"
                 android:layout_width="80dp"
                 android:layout_height="80dp"
                 android:layout_alignParentLeft="true"
                 android:layout_alignParentTop="true"
                 android:layout_marginLeft="30dp"
                 android:src="@drawable/templogo" />
          
</RelativeLayout>
